--- a/Tetris/Tetris/Tetris.vcxproj.filters
+++ b/Tetris/Tetris/Tetris.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="..\..\Tetris.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Main.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Menu.h">
