--- a/Tetris/Tetris/Tetris.vcxproj
+++ b/Tetris/Tetris/Tetris.vcxproj
@@ -125,6 +125,9 @@
     <ClInclude Include="..\..\Menu.h" />
     <ClInclude Include="..\..\Tetris.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="menu.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
